# agentcore_s3_event

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  rules.md
.claude/rules/: python.md  strands.md  terraform.md  workflow.md
lambda/: proxy_handler.py  requirements.txt
samples/: meeting_minutes_2025_01.txt  meeting_minutes_2025_02.txt
scripts/: build_and_push.sh  package_lambda.sh
setup/: create_memory.py
src/summarizer/: __init__.py  agent.py  app.py
src/summarizer/tools/: __init__.py  document_tools.py
terraform/: agentcore_memory.tf  agentcore_runtime.tf  ecr.tf  iam.tf  lambda.tf  main.tf  observability.tf  outputs.tf  s3.tf  terraform.tfvars.example  tfplan  variables.tf
